--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "unistd.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "signal.h": "c",
+        "cstdlib": "c"
     }
 }
