--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -3,6 +3,7 @@
         "unistd.h": "c",
         "stdlib.h": "c",
         "signal.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "time.h": "c"
     }
 }
