--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -4,6 +4,7 @@
         "stdlib.h": "c",
         "signal.h": "c",
         "cstdlib": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "string.h": "c"
     }
 }
